Create html card with javascript. Add cards to html with javascript. Add css control for layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library Project</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
+  <div class="container">
+    <div class="header-wrapper">
+      <div class="header">
+          <p class="title-text">Library</p>
+          <button class="add-book">Add Book</button>
+      </div>
+    </div>
+    <div class="main-wrapper">
+      <div class="main">
+        <div class="card-container" id="card-container">
+          <!-- <div class="card">
+            <div class="card-inner">
+              <div class="card-upper">
+                <p class="card-book-title">My book title</p>
+                <p class="card-book-author">by the Author</p>
+                <p class="card-book-pages">### pages</p>
+              </div>
+              <div class="card-lower">
+                <p>read?</p>
+                <input class="card-book-hasRead" type="checkbox">
+              </div>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
