--- a/index.html
+++ b/index.html
@@ -12,27 +12,48 @@
     <div class="header-wrapper">
       <div class="header">
           <p class="title-text">Library</p>
-          <button class="add-book">Add Book</button>
+          <button class="add-book-btn">New Book</button>
       </div>
     </div>
     <div class="main-wrapper">
       <div class="main">
         <div class="card-container" id="card-container">
-          <!-- <div class="card">
-            <div class="card-inner">
-              <div class="card-upper">
-                <p class="card-book-title">My book title</p>
-                <p class="card-book-author">by the Author</p>
-                <p class="card-book-pages">### pages</p>
-              </div>
-              <div class="card-lower">
-                <p>read?</p>
-                <input class="card-book-hasRead" type="checkbox">
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
+    </div>
+  </div>
+  <div id="addBookModal" class="modal">
+    <div class="modal-content">
+      <span id="closeModalBtn" class="close">&times;</span>
+      <h2>Add a book!</h2>
+      <form id="form-add-book">
+        <div class="form-item">
+          <label for="form-book-name">Book name:</label>
+          <input type="text" id="form-book-name" name="title" required>
+        </div>
+        <div class="form-item">
+          <label for="form-author-name">Author name:</label>
+          <input type="text" id="form-author-name" name="author" required>
+        </div>
+        <div class="form-item">
+          <label for="form-num-pages">Number of pages:</label>
+          <input type="number" id="form-num-pages" name="numPages" required>
+        </div>
+        <fieldset class="form-item">
+          <legend>Have you read this book?:</legend>
+          <div class="radio-wrapper">
+            <div class="radio-choice">
+              <label for="form-yes-read">Yes</label>
+              <input type="radio" id="form-yes-read" name="haveRead" value="true" required>
+            </div>
+            <div class="radio-choice">
+              <label for="form-no-read">No</label>
+              <input type="radio" id="form-no-read" name="haveRead" value="false" required>
+            </div>
+          </div>
+        </fieldset>
+        <button class="submit-add-book-btn" type="submit">Add Book</button>
+      </form>
     </div>
   </div>
 </body>
